# go2_rl_agents

./: CMakeLists.txt  README.md  package.xml
go2_rl_agents/: go2_inverse_kinematics.py
include/go2_rl_agents/: go2_joint_controller_interface.hpp
scripts/: go2_agent_base.py  go2_agent_cpg.py  go2_wireless_controller.py
src/: go2_enable_motion_control.cpp  go2_joint_controller_interface.cpp
